# report-a-breach

./: .env.example  .env.local-docker  .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Pipfile  Procfile  README.md  docker-compose.yml  fixtures.sh  local.env.example  mypy.ini  nohup.out  package-lock.json  package.json  pii-ner-exclude.txt  pii-secret-exclude.txt  pre-commit  pyproject.toml  requirements.txt  run.sh  sample.env  setup.py  tasks.py  wipe_database.sh  wipe_database_and_squash_migrations.sh
.circleci/: config.yml
.copilot/: config.yml  image_build_run.sh
.copilot/phases/: build.sh  pre_build.sh
aws/: cors.json  create_bucket.sh
config/: caseworker_urls.py  env.py  ratelimit.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py  test.py  uat.py
django_app/: manage.py
django_app/auth/: breach_portal_auth.py
django_app/config/: asgi.py  asim_formatter.py  env.py  gunicorn.py  urls.py  uvicorn_worker.py  wsgi.py
django_app/core/: base_views.py  choices.py  context_processors.py  custom_upload_handler.py  debug_urls.py  decorators.py  document_storage.py  form_fields.py  forms.py  middleware.py  urls.py  utils.py  views.py
django_app/feedback/: choices.py  crispy_fields.py  forms.py  models.py  urls.py  views.py
django_app/healthcheck/: urls.py  views.py
django_app/report_a_breach/: __init__.py  apps.py  form_step_conditions.py  forms.py  models.py  session.py  urls.py  views.py
django_app/report_a_suspected_breach/: __init__.py  admin.py  apps.py  choices.py  exceptions.py  fields.py  form_step_conditions.py  form_step_conditions_old.py  forms.py  mixins.py  models.py  session.py  tasklist.py  types.py  urls.py  urls_old.py  utils.py  views.py  views_old.py
django_app/utils/: address_formatter.py  breach_report.py  companies_house.py  notifier.py  s3.py
django_app/view_a_suspected_breach/: admin.py  apps.py  authbrokers.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
healthcheck/: urls.py
healthcheck/checks/: s3.py
helper_scripts/: clear_migrations_and_wipe_database.sh  fixtures.sh  squash_migrations.sh  wipe_database.sh
report_a_breach/: __init__.py  admin.py  apps.py  caseworker_urls.py  constants.py  custom_s3_upload_handler.py  custom_upload_handler.py  document_storage.py  form_fields.py  question_content.py  sanctions_regimes.json  session.py  urls.py
report_a_breach/base_classes/: forms.py  models.py  views.py
report_a_breach/core/: caseworker_urls.py  form_step_conditions.py  forms.py  models.py  urls.py  views.py
report_a_breach/e2e_tests/: conftest.py  test_breach.py  test_startpage.py
report_a_breach/fixtures/: sanctions_regimes.json
report_a_breach/migrations/: 0001_initial.py  0002_alter_breach_sanctions_regimes_and_more.py  0002_breach_other_sanctions_regime_and_more.py  0002_breach_personorcompany_sanctionsregime_and_more.py  0002_breach_what_were_the_goods_and_more.py  0002_historicaluploadeddocument_and_more.py  0002_remove_historicalpersonorcompany_county_and_more.py  0002_remove_historicalpersonorcompany_reference_and_more.py  0003_alter_historicaluploadeddocument_file_and_more.py  0003_breach_business_registered_with_companies_house_and_more.py  0003_historicalbreach_what_were_the_goods.py  0003_historicalbreach_what_were_the_goods_and_more.py  0003_historicalpersonorcompany_country_and_more.py  0003_historicalsanctionsregimebreachthrough_unknown_regime_and_more.py  0003_remove_breach_sanctions_regimes.py  0003_reporteremailverification_and_more.py  0004_breach_do_you_know_the_registered_company_number_and_more.py  0004_breach_sanctions_regimes.py  0004_merge_20240221_1616.py  0004_remove_historicalsanctionsregimebreachthrough_unknown_regime_and_more.py  0004_rename_postcode_historicalpersonorcompany_postal_code_and_more.py  0005_alter_breach_sanctions_regimes.py  0005_merge_20240206_1556.py  0005_remove_breach_business_registered_with_companies_house_and_more.py  0006_alter_breach_unknown_sanctions_regime_and_more.py
report_a_breach/sites/: __init__.py  context_processors.py
report_a_breach/templates/: base.html  base_form_step.html  choices_form.html  complete.html  confirmation.html  done.html  file_upload.html  form.html  form_no_crispy.html  form_wizard_step.html  home.html  landing.html  start.html  summary.html  view_a_breach.html
report_a_breach/templatetags/: get_gtm_id.py  get_wizard_step_url.py  gtm_enabled.py
report_a_breach/utils/: companies_house.py  notifier.py  s3.py
report_trade_sanctions_breach/: manage.py
report_tsb/: manage.py
tests/: conftest.py  factories.py  helpers.py  utils.py
version_mvp_testing scripts/: 1_regimes.sql  2_reporters.sql  3_companies.sql  4_reports..sql  5_questions.sql  6_missing links.sql  7_summary_queries.sql  8_consumption.sql  ERD.pgerd  Untitled.sql  backup_mvp.sql  readme.txt
(+354 files in other folders)
