# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python. Multiline strings are treated as
# verbose regular expressions by Black. Use [ ] to denote a significant space
# character.

[project]
name = "report-a-trade-sanctions-breach-prototype"
version = "0.0.1"

[build-system]
requires = [
    "setuptools>=62",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = [
    '*/migrations/*',
    '*/site-packages/*',
    'manage.py',
    '*/.pycharm_helpers/*',
    '*/pycharm/*',
]

exclude_lines = [
    # Don't complain about missing debug-only code:
    'def __repr__',
    'if self\.debug',

    # Don't complain if tests don't hit defensive assertion code:
    'raise AssertionError',
    'raise NotImplementedError',

    # Don't complain if non-runnable code isn't run:
    'if 0:',
    'if __name__ == .__main__.:',
]

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | .venv
  | tests-reports
)/
'''

# see https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.test"
norecursedirs = [
    "allure-results",
    "csv",
    "dist",
    "docs",
    "*.egg-info",
    ".git",
    "htmlcov",
    ".local",
    ".ipynb_checkpoints",
    "node_modules",
    "prof",
    "__pycache__",
    "static",
    "run",
    "venv",
]
addopts = "-n=auto"
